--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,5 +1,7 @@
 name: Build Release
 on: [ push, pull_request, workflow_dispatch ]
+permissions:
+  contents: write
 jobs:
   create-release:
     runs-on: 'ubuntu-22.04'
