--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -5,6 +5,10 @@ permissions:
 jobs:
   create-release:
     runs-on: 'ubuntu-22.04'
+    permissions:
+       # Need permission to write to the Releases tab now.
+       # https://github.com/ncipollo/release-action/issues/208.
+       contents: write
     outputs:
       upload_url: ${{ steps.create-release.outputs.upload_url }}
     steps:
@@ -18,6 +22,10 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
   build:
     runs-on: ${{ matrix.os }}
+    permissions:
+       # Need permission to write to the Releases tab now.
+       # https://github.com/ncipollo/release-action/issues/208.
+       contents: write
     needs: create-release
     strategy:
       fail-fast: false
